<resources>
    <string name="app_name">Mana</string>
    <string name="track_your_order">Track your Order</string>
    <string name="select_restaurant">Select Restaurant</string>
    <string name="read_safety_guidelines">Read Safety Guidelines</string>
    <string name="welcome">Welcome</string>
    <string name="account">Account</string>
    <string name="to_mana">to Mana</string>
    <string name="mana">Mana</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="safety_guidelines">Safety Guidelines</string>
    <string name="customers_must_wear_a_mask_at_all_times_unless_eating_or_drinking">Customers must wear a mask at all times unless eating or drinking.</string>
    <string name="follow_social_distancing_protocols_at_least_6_feet_distance">Follow social distancing protocols, at least 6 feet distance.</string>
    <string name="walk_in_with_clean_hands_by_utilizing_sanitation_stations">Walk in with clean hands by utilizing sanitation stations.</string>
    <string name="plan_ahead_by_making_a_reservation_and_utilizing_mobile_pay">Plan ahead by making a reservation and utilizing mobile pay.</string>
    <string name="log_out">Log out</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="name">Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
</resources>