<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5EC">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="245dp"
        android:layout_height="262dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_main"
        app:layout_constraintVertical_bias="0.031"
        app:srcCompat="@drawable/people_eating_at_restaurant_2_01" />

    <TextView
        android:id="@+id/title_main"
        android:layout_width="148dp"
        android:layout_height="86dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lobster"
        android:text="@string/mana"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#6200EA"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_registration"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="200dp"
        android:background="#FEC1C9"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.142" />

    <EditText
        android:id="@+id/password_registration"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="#FEC1C9"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="@+id/email_registration"
        app:layout_constraintStart_toStartOf="@+id/email_registration"
        app:layout_constraintTop_toBottomOf="@+id/email_registration" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="#6200EA"
        android:text="@string/sign_up"
        android:textColor="#FFF5EC"
        app:layout_constraintEnd_toEndOf="@+id/password_registration"
        app:layout_constraintStart_toStartOf="@+id/password_registration"
        app:layout_constraintTop_toBottomOf="@+id/password_registration" />
</androidx.constraintlayout.widget.ConstraintLayout>