<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5EC"
    tools:context=".WelcomeActivity">

    <Button
        android:id="@+id/welcome_login_button"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:text="@string/log_in"
        android:textColor="@color/appBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/Title_main"
        android:layout_width="148dp"
        android:layout_height="86dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/lobster"
        android:text="@string/mana"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#6200EA"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_here_button"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="#5972E6"
        android:text="@string/click_here_to_register"
        android:textColor="#FFF5EC"
        app:layout_constraintEnd_toEndOf="@+id/welcome_login_button"
        app:layout_constraintStart_toStartOf="@+id/welcome_login_button"
        app:layout_constraintTop_toBottomOf="@+id/welcome_login_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="245dp"
        android:layout_height="262dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title_main"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/people_eating_at_restaurant_2_01" />

</androidx.constraintlayout.widget.ConstraintLayout>